test/classes/initializers/phase1/hasOnFieldInit.good
hasOnFieldInit.chpl:4: In initializer:
hasOnFieldInit.chpl:6: error: can't initialize field "x" inside an on block during phase 1 of initialization
